Final touches to first version

--- a/manuscript/manuscript.qmd
+++ b/manuscript/manuscript.qmd
@@ -44,9 +44,9 @@ theme_set(theme_ggdist() +
 
 # Introduction
 
-Listening to non-native speech is costlier than listening to native speech, even for highly proficient bilinguals, and especially in acoustically adverse situations [@lecumberri2010non; @takata1990english]. However, there are some sources of information which may make non-native speech comprehension easier. One of the sources of this increased difficulty stems from the possible mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal do not overlap perfectly with any phonemic category in the listener's native language. For example, imagine a Spanish native, with no previous familiarity with any other language, who listens for the first time to French may encounter the word /`r knitr::asis_output("\U0070\U0254\U0281\U0074")`/ (*porte*), translation of door in French. The voiced uvular fricative consonant /`r knitr::asis_output("\U0281")`/ and the open-mid back rounded vowel /`r knitr::asis_output("\U0254")`/ do not exist in Spanish as phonemic categories. These discrepancies can nonetheless be perceived as allophonic variations the native (Spanish) phonemes /r/ and /o/ [@best2001discrimination], and the non-native speech signal may engage lexical processing mechanisms [@weber2004lexical], leading to the activation and selection, and therefore the recognition of its translation to Spanish /`r knitr::asis_output("\U02C8\U0070\U0077\U0065\U0072\U002E\U0074\U0061")`/ (*puerta*). The recognition of this French, unfamiliar word relies almost entirely on its similarity with its Spanish translation. Conversely, imagine now that the same Spanish listener hears English for the first time and encounters the word /`r knitr::asis_output("\U0064\U0254\U02D0")`/ (*door*). This time, phonological similarity is of little help: /`r knitr::asis_output("\U02C8\U0070\U0077\U0065\U0072\U002E\U0074\U0061")`/ and /`r knitr::asis_output("\U0064\U0254\U02D0")`/ share very few phonemes. It would come as a surprise if the listener was able to translate the English word successfully, if not by relying on previously learnt word-concept associations (which they lack, as they are unfamiliar to English).
+Listening to non-native speech is costlier than listening to native speech, even for highly proficient bilinguals, and especially in acoustically adverse situations [@lecumberri2010non; @takata1990english]. However, there are some sources of information which may make non-native speech comprehension easier. One of the sources of this increased difficulty stems from the possible mismatch between the phonology of the native and the non-native languages: some acoustic features embedded in the non-native speech signal do not overlap perfectly with any phonemic category in the listener's native language. For example, imagine a Spanish native, with no previous familiarity with any other language, who listens for the first time to French may encounter the word /pɔʁt/ (*porte*), translation of door in French. The voiced uvular fricative consonant /ʁ/ and the open-mid back rounded vowel /ɔ/ do not exist in Spanish as phonemic categories. These discrepancies can nonetheless be perceived as allophonic variations the native (Spanish) phonemes /ɾ/ and /o/ [@best2001discrimination], and the non-native speech signal may engage lexical processing mechanisms [@weber2004lexical], leading to the activation and selection, and therefore the recognition of its translation to Spanish /pweɾta/ (*puerta*). The recognition of this French, unfamiliar word relies almost entirely on its similarity with its Spanish translation. Conversely, imagine now that the same Spanish listener hears English for the first time and encounters the word /dɔː/ (*door*). This time, phonological similarity is of little help: /pweɾta/ and /dɔː/ share very few phonemes. It would come as a surprise if the listener was able to translate the English word successfully, if not by relying on previously learnt word-concept associations---which they lack, as they are unfamiliar to English.
 
-Cross-language phonological similarity seems, at face value, an important source of information for unfamiliar listeners during auditory word recognition, even if translations are not phonologically identical. Although this mismatch has a noticeable toll on comprehension [@cutler2004patterns], the fact that word recognition can take place at all in such circumstances illustrates that non-native listeners–even low-proficiency ones–are rarely completely naïve to the language they are listening to. In the present study, we investigate the extent to which adult listeners rely on the phonological similarity between their native and non-native languages during word recognition, capitalising on the role of *cognates.*
+Cross-language phonological similarity seems, at face value, an important source of information for unfamiliar listeners during auditory word recognition, even if translations are not phonologically identical. Although this mismatch has a noticeable toll on comprehension [@cutler2004patterns], the fact that word recognition can take place at all in such circumstances illustrates that non-native listeners–even low-proficiency ones–are rarely completely naïve to the language they are listening to. In the present study, we investigate the extent to which adult listeners rely on the phonological similarity between their native and non-native languages during word recognition, capitalising on the role of *cognates*.
 
 Many languages share, to some extent, similarities at the lexical level. This is frequently due to their typological closeness and/or socio-historical events involving the speakers of these languages (e.g., migration, social contact). Cognates embody a particular case of such commonalities. Cognates are defined as cross-language synonyms which have similar forms whose form is similar (at the phonological level, orthographic level, signed level), commonly due to their shared etymological origin^[Some form-similar cross-language synonyms are technically not cognates. For example, *sun* and *sol* (in Spanish) share phonological onset but their etymology points to different origins. The complimentary case is equally problematic when defining cognateness: cross-language synonyms that share etymological origin may not be necessarily be recognised as cognates by the average listener. Such is the case of *cheese* and *queso* which share Latin root but are phonologically dissimilar. For simplicity, we will use the term *cognateness* in this paper to include all cross-language synonyms that fulfill a specified threshold of form similarity, regardless of etymology. We do not expect that etymology plays a direct role on language perception if it is not via form-similarity, since it is not necessary for participants in psycholinguistic experiments to be aware of the etymology of the words they encounter in the tasks to be subject to the effect of form-similarity.]. For example, Romance languages such as Spanish and Catalan share many cognates [@schepens2012distributions], as in the case of *puerta* and *porta* (door in Spanish and Catalan, respectively). Cognates play a pivotal role in many models of bilingual lexical processing because they provide evidence that bilinguals access the lexicon in a language non-selective way. For instance, pictures are named faster by Spanish-Catalan bilinguals when their associated labels in both languages are cognates (e.g., *puerta*-*porta*), compared to when their labels are non-cognates (*mesa*-*taula*, [table]), which suggests that word representations of both languages are activated during word retrieval [@costa2000cognate]. This cognate advantage is not restricted to production, but also extends to word recognition [@thierry2007brain; @midgley2011effects], word learning [@de2000hard; @lotto1998effects; @valente2018does; @elias2022cross], and word translation [@christoffels2006memory].
 
